refactor: use ClassGraph for classpath-based extension YAML discovery
Replace the filesystem hack (locating a known resource and walking its
parent directory) with ClassGraph's classpath scanning API.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>